handle properties resources update build template update gradle-tooling-api version 6.4

--- a/src/main/resources/templates/build.gradle.twig
+++ b/src/main/resources/templates/build.gradle.twig
@@ -1,4 +1,5 @@
 plugins {
+    id 'io.spring.dependency-management' version '1.0.8.RELEASE'
     id "io.ebean" version "12.1.8"
     id 'java'
     id 'idea'
@@ -18,7 +19,18 @@ ebean {
     debugLevel = 1
 }
 
+ext {
+    set('vaadinVersion', "14.1.5")
+}
+
 dependencies {
+    compile 'com.vaadin:vaadin-spring-boot-starter'
     compile 'com.tifires.genesis:core:0.3'
     compile 'io.ebean:ebean:12.1.8'
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "com.vaadin:vaadin-bom:${vaadinVersion}"
+    }
 }
